# SquidVM

./: .gitignore  Cargo.toml  SECURITY.md  build-releases.ps1  build-svdk.ps1  build.rs  license.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
build-scripts/: build-releases.ps1  build-svdk.ps1
examples/: addnprint-no-metadata.sqd  addnprint.sqdbin  coveragetest.sqdbin  helloworld.sqdbin  openwindow-previewtest.sqd  randomgarbage-errortest.sqd  randomgarbage-errortest.sqdbin  testbinary.sqdbin
install-scripts/: install-squidvm.sh  install-svdk.sh  uninstall.sh
src/: argsdef.rs  errdef.rs  getup.rs  instructiondefs.rs  macrodefs.rs  main.rs  targetdef.rs  tests.rs
src/sar_reader/: mod.rs
src/sarreader/: mod.rs
src/sqbinreader/: filereader.rs  mod.rs
src/sqd_reader/: mod.rs
src/sqd_reader/sar_reader/: archivereader.rs
src/sqd_reader/sqdbin_reader/: defs.rs  filereader.rs  mod.rs
src/sqdbin_reader/: defs.rs  filereader.rs
src/sqdbinreader/: defs.rs  filereader.rs  mod.rs
src/vm_internals/: heap.rs  immediates.rs  mod.rs  repository.rs  return_stack.rs  stack.rs  vm.rs  vm_threads.rs
src/vm_internals/windowing/: mod.rs
src/vminternals/: heap.rs  immediates.rs  mod.rs  repository.rs  stack.rs  vm.rs
