[package]
name = "squid-vm"
version = "0.10.0-alpha"
edition = "2021"
repository = "https://github.com/Fragmenta-Company/SquidVM"
authors = ["Nicolas Renan Machado Dias", "Fragmenta Company"]
description = "SquidVM is a VM made in Rust, having implemented a high performant architecture."
documentation = "https://squidvmdocs.fragmenta.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
devkit = []

[profile.release]
strip = "symbols"
#lto = true

[dependencies]
simple_logger = "4.3"
log = "0.4"
byteorder = "1.5"
arrayvec = { version = "0.7", features = [] }
fnv = { version = "1", features = [] }
clap = { version = "4", features = ["derive"] }
zip = "0.6"
minreq = { version = "2.11.0", features = ["json-using-serde", "https"] }
serde_json = "1.0.108"
async-std = "1.12.0"
futures = { version = "0.3.29", features = [] }
rand = "0.8.5"
winit = { version = "0.29" }
relm4 = { version = "0.7.0-beta.2", features = ["relm4-macros"] }
relm4-macros = { version = "0.7.0-beta.2" }
relm4-icons = { version = "0.7.0-alpha.2" }
relm4-components = { version = "0.7.0-alpha.2", features = ["web"] }
gtk = { package = "gtk4", version = "0.7" }
