[package]
name = "squid-vm"
version = "0.10.0-alpha"
edition = "2021"
repository = "https://github.com/Fragmenta-Company/SquidVM"
authors = ["Nicolas Renan Machado Dias", "Fragmenta Company"]
description = "SquidVM is a VM made in Rust, having implemented a high performant architecture."
documentation = "https://squidvmdocs.fragmenta.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
devkit = ["all"]
all = ["sdl2", "wgpu", "winit", "green-threads", "check-update"]
sdl2 = ["dep:sdl2"]
sdl2-static = ["sdl2/bundled", "sdl2"]
power_windowing = ["winit", "wgpu"]
winit = ["dep:winit"]
wgpu = ["dep:wgpu-hal"]
green-threads = ["dep:async-std"]
check-update = ["dep:minreq"]

[profile.release]
strip = "symbols"
#lto = true

[dependencies]
simple_logger = "4.3"
log = "0.4"
byteorder = "1.5"
arrayvec = { version = "0.7", features = [] }
fnv = { version = "1", features = [] }
clap = { version = "4", features = ["derive"] }
zip = "0.6"
minreq = { version = "2.11", features = ["json-using-serde", "https"], optional = true }
serde_json = "1.0"
async-std = { version = "1.12", optional = true }
futures = { version = "0.3" }
rand = "0.8"
winit = { version = "0.29", optional = true }
wgpu-hal = { version = "0.19", features = ["vulkan"], optional = true }
sdl2 = { version = "0.36", features = ["bundled"], optional = true }