[package]
name = "squid-vm"
version = "0.10.0-alpha"
edition = "2021"
repository = "https://github.com/Fragmenta-Company/SquidVM"
authors = ["Nicolas Renan Machado Dias", "Fragmenta Company"]
description = "SquidVM is a VM made in Rust, having implemented a high performant architecture."
documentation = "https://squidvmdocs.fragmenta.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dep:clap", "ahash_algorithm"]
devkit = ["all"]
all = [
    "sdl2",
    "wgpu",
    "winit",
    "green-threads",
    "check-update",
    "sar", "logging",
    "random_generator",
    "ahash_algorithm"
]
sdl2 = ["dep:sdl2"]
sdl2-static = ["sdl2/bundled", "sdl2", "sdl2/static-link"]
power-windowing = ["winit", "wgpu"]
winit = ["dep:winit"]
wgpu = ["dep:wgpu-hal"]
green-threads = ["dep:async-std", "dep:futures"]
check-update = ["dep:minreq", "json_parsing"]
json_parsing = ["dep:serde_json"]
sar = ["dep:zip"]
logging = ["dep:simple_logger", "dep:log"]
random_generator = ["dep:rand"]
ahash_algorithm = ["dep:ahash"]
bundle = ["sar"]

[profile.release]
strip = "symbols"
opt-level = 3
#lto = true

[dependencies]
simple_logger = { version = "4.3", optional = true }
log = { version = "0.4", optional = true }
byteorder = { version = "1.5" }
arrayvec = { version = "0.7", features = [] }
ahash = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
zip = { version = "0.6", optional = true }
minreq = { version = "2.11", features = ["json-using-serde", "https"], optional = true }
serde_json = { version = "1.0", optional = true }
async-std = { version = "1.12", optional = true }
futures = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
winit = { version = "0.29", optional = true }
wgpu-hal = { version = "0.19", features = ["vulkan"], optional = true }
sdl2 = { version = "0.36", features = ["bundled"], optional = true }